--- a/config.json
+++ b/config.json
@@ -112,15 +112,15 @@
    "ProxyPort": "443",
    "Info": "Tlsws"
   },
-  {
-    "Name": "Claro SSL 2",
-   "FLAG": "claro",
-   "Payload": "GET sni://boom4u.com.br HTTP\/1.3[crlf]Host [app_host][crlf]Upgrade: websocket[crlf]Connection: Upgrade[crlf][crlf]",
-   "SNI": "boom4u.com.br",
-   "TlsIP": "",
-   "ProxyIP": "104.16.18.94",
-   "ProxyPort": "443",
-   "Info": "SSL"
+ {
+  "Name": "Claro SSL 2",
+  "FLAG": "claro",
+  "Payload": "GET sni://boom4u.com.br HTTP\/1.3[crlf]Host [app_host][crlf]Upgrade: websocket[crlf]Connection: Upgrade[crlf][crlf]",
+  "SNI": "boom4u.com.br",
+  "TlsIP": "104.16.18.94",
+  "ProxyIP": "",
+  "ProxyPort": "443",
+  "Info": "SSL"
   },
   {
     "Name": "CLARO SSL 3",
