--- a/config.json
+++ b/config.json
@@ -75,7 +75,7 @@
     {
    "Name": "TIM 2",
    "FLAG": "tim",
-   "Payload": "GET ws://static.r4you.co HTTP/1.1[crlf]Host: [app_host][crlf]Upgrade: websocket[crlf][crlf]",
+   "Payload": "GET ws://static.r4you.com HTTP/1.1[crlf]Host: [app_host][crlf]Upgrade: websocket[crlf][crlf]",
    "SNI": "static.r4you.co",
    "TlsIP": "104.26.5.175",
    "ProxyIP": "",
@@ -103,21 +103,21 @@
    "Info": "Tlsws"
   }, 
   {
-    "Name": "Claro SSL 1",
+   "Name": "Claro TLS 1",
    "FLAG": "claro",
-   "Payload": "GET sni://content.akross.com.br HTTP\/1.3[crlf]Host  [app_host][crlf]Upgrade: websocket[crlf]Connection: Upgrade[crlf][crlf]",
-   "SNI": "content.akross.com.br",
-   "TlsIP": "content.akross.com.br",
+   "Payload": "GET ws://atendimento.descomplica.com.br HTTP/1.1\nHost: [app_host]\nUpgrade: ws\n\n",
+   "SNI": "atendimento.descomplica.com.br",
+   "TlsIP": "no.descomplica.com.br",
    "ProxyIP": "",
    "ProxyPort": "443",
    "Info": "Tlsws"
-  },
+  }, 
  {
   "Name": "Claro SSL 2",
   "FLAG": "claro",
   "Payload": "GET sni://boom4u.com.br HTTP\/1.3[crlf]Host [app_host][crlf]Upgrade: websocket[crlf]Connection: Upgrade[crlf][crlf]",
   "SNI": "boom4u.com.br",
-  "TlsIP": "104.16.18.94",
+  "TlsIP": "104.16.19.94",
   "ProxyIP": "",
   "ProxyPort": "443",
   "Info": "SSL"
